Fix styling on mobile sizes [WEB-3090]

--- a/frontend/scss/molecules/_m-custom-banner.scss
+++ b/frontend/scss/molecules/_m-custom-banner.scss
@@ -176,6 +176,10 @@
             .text-wrapper {
                 flex-direction: row;
                 justify-content: space-between;
+
+                @include breakpoint('small-') {
+                    flex-direction: column;
+                }
             }
 
             .custom-banner-title {
